--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "line-reader": "^0.4.0",
+    "n-readlines": "^1.0.1",
     "twitter": "^1.7.1"
   }
 }
